--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -1,3 +1,7 @@
+:root {
+    --shadow: #969696;
+}
+
 .shop-detail {
     background-color: #ededed;
     min-height: 100vh;
@@ -8,28 +12,72 @@
     width: calc(100% - 80px);
     max-width: 1360px;
     margin: 0 auto;
-    display: flex;
-    gap: 10%;
+
+    @media(min-width: 768px) {
+        display: flex;
+        gap: 10%;
+    }
 }
 
 .detail-block__left {
-    width: 45%;
+    width: 100%;
+
+    @media(min-width: 768px) {
+        width: 45%;
+    }
 }
 
 .detail-block__right {
-    width: 45%;
+
+    margin-top: 40px;
+    width: 100%;
     position: relative;
     background-color: #4553ff;
     border-radius: 8px;
+    box-shadow: 4px 4px 4px var(--shadow);
+
+    @media(min-width: 768px) {
+        margin-top: 0;
+        width: 45%;
+    }
+}
+
+.btn-menu {
+    margin-bottom: 32px;
+}
+
+.shop-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.shop-info__heading {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+
+    >.btn-back {
+        padding: 4px 8px;
+        background-color: white;
+        border-radius: 4px;
+        text-decoration: none;
+        color: black;
+        font-size: 16px;
+        font-weight: bold;
+        box-shadow: 2px 2px 2px var(--shadow);
+        transform: translateY(8px);
+    }
+
+    >.shop_name {
+        font-size: 32px;
+    }
 }
 
 .shop_image {
     width: 100%;
-    height: 400px;
 
     >img {
         width: 100%;
-        height: 100%;
         object-fit: cover;
     }
 }
@@ -48,10 +96,10 @@ p {
 
 .reservation-panel {
     width: 100%;
+    padding-top: 32px;
 }
 
 .form-title {
-    margin: 32px 0;
     font-size: 24px;
     color: white;
 }
