--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -86,3 +86,18 @@
     color: white;
     background-color: #305dff;
 }
+
+.no_result {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    >.no_result__text {
+        font-size: 24px;
+        margin: 25vh 0 24px;
+    }
+
+    >a{
+        color: #305dff;
+    }
+}
