飲食店一覧ビュー メニューボタン設置 #2

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -17,6 +17,7 @@
 .index__heading {
     display: flex;
     justify-content: space-between;
+    vertical-align: top;
     padding-bottom: 32px;
 }
 
