--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -9,13 +9,15 @@
 }
 
 .login__inner {
-    max-width: 1240px;
+    max-width: 1440px;
+    width: calc(100% - 80px);
+    padding: 40px 0;
     margin: 0 auto;
 }
 
 .login__panel {
     max-width: 360px;
-    margin: 0 auto;
+    margin: 15vh auto 0;
     background-color: white;
     border-radius: 4px;
     box-shadow: 2px 2px 2px var(--shadow);
@@ -43,10 +45,21 @@
     gap: 8px;
     position: relative;
 
-    >input {
-        background-color: none;
-        border: none;
-        border-bottom: solid 1px black;
+    >.input__elements {
+        display: flex;
+        gap: 6px;
+
+        >img {
+            width: 24px;
+            height: 24px;
+        }
+
+        >input {
+            width: 100%;
+            background-color: none;
+            border: none;
+            border-bottom: solid 1px black;
+        }
     }
 
     >.login__btn {
@@ -63,35 +76,6 @@
     }
 }
 
-.login__form::before {
-    display: inline-block;
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    content: '';
-    z-index: 100;
-    background-image: url(src/public/icons/email.png);
-    background-size: contain;
-    background-color: black;
-    transform: translate(-40px, -6px);
-}
-
-.login__form::after {
-    display: inline-block;
-    position: absolute;
-    bottom: 0;
-    width: 32px;
-    height: 32px;
-    content: '';
-    z-index: 100;
-    background-image: url(src/public/icons/email.png);
-    background-size: contain;
-    background-color: rgb(255, 96, 96);
-    transform: translate(-40px, -50px);
-}
-
-
-
 /* ユーザー登録画面 */
 .register {
     min-height: 100vh;
@@ -99,13 +83,15 @@
 }
 
 .register__inner {
-    max-width: 1240px;
+    max-width: 1440px;
+    width: calc(100% - 80px);
+    padding: 40px 0;
     margin: 0 auto;
 }
 
 .register__panel {
     max-width: 360px;
-    margin: 0 auto;
+    margin: 15vh auto 0;
     background-color: white;
     border-radius: 4px;
     box-shadow: 2px 2px 2px var(--shadow);
@@ -136,9 +122,9 @@
 
     >.input__elements {
         display: flex;
-        gap:6px;
+        gap: 6px;
 
-        >img{
+        >img {
             width: 24px;
             height: 24px;
         }
