--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -112,7 +112,8 @@ p {
         margin-bottom: 24px;
         padding: 0;
 
-        >input {
+        >input,
+        select {
             padding: 8px;
             border: none;
             border-radius: 8px;
