--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -150,3 +150,89 @@
         cursor: pointer;
     }
 }
+
+/* 会員登録後サンクスページ */
+.registered {
+    min-height: 100vh;
+    background-color: #ededed;
+}
+
+.registered__inner {
+    max-width: 1440px;
+    width: calc(100% - 80px);
+    padding: 40px 0;
+    margin: 0 auto;
+}
+
+.registered__panel {
+    max-width: 400px;
+    text-align: center;
+    margin: 15vh auto 0;
+    padding: 80px 48px;
+    background-color: white;
+    border-radius: 4px;
+    box-shadow: 2px 2px 2px var(--shadow);
+
+    >.pannel__heading-text {
+        font-size: 20px;
+        font-weight: normal;
+        margin-bottom: 48px;
+    }
+
+    >.gotop__btn {
+        margin-top: 12px;
+        margin-left: auto;
+        padding: 6px 20px;
+        width: 80px;
+        font-size: 12px;
+        color: white;
+        background-color: #4553ff;
+        border: none;
+        border-radius: 4px;
+        text-decoration: none;
+        cursor: pointer;
+    }
+}
+
+/* 予約完了後サンクスページ */
+.reserved {
+    min-height: 100vh;
+    background-color: #ededed;
+}
+
+.reserved__inner {
+    max-width: 1440px;
+    width: calc(100% - 80px);
+    padding: 40px 0;
+    margin: 0 auto;
+}
+
+.reserved__panel {
+    max-width: 400px;
+    text-align: center;
+    margin: 15vh auto 0;
+    padding: 80px 48px;
+    background-color: white;
+    border-radius: 4px;
+    box-shadow: 2px 2px 2px var(--shadow);
+
+    >.pannel__heading-text {
+        font-size: 20px;
+        font-weight: normal;
+        margin-bottom: 48px;
+    }
+
+    >.back__btn {
+        margin-top: 12px;
+        margin-left: auto;
+        padding: 6px 20px;
+        width: 80px;
+        font-size: 12px;
+        color: white;
+        background-color: #4553ff;
+        border: none;
+        border-radius: 4px;
+        text-decoration: none;
+        cursor: pointer;
+    }
+}
