--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -60,6 +60,7 @@
         padding: 4px 8px;
         background-color: white;
         border-radius: 4px;
+        border: none;
         text-decoration: none;
         color: black;
         font-size: 16px;
