--- a/src/public/css/shop_index.css
+++ b/src/public/css/shop_index.css
@@ -83,8 +83,6 @@
         width: 5%;
     }
 
-    .td__shop_name {}
-
     .td__area_name {
         width: 10%;
     }
@@ -121,4 +119,28 @@
 
 .table-data:nth-of-type(even) {
     background-color: #fff6ed;
+}
+
+.btn__update_shop {
+    background-color: rgb(37, 140, 224);
+    border: solid 1px rgb(105, 105, 105);
+    border-radius: 4px;
+    color: white;
+    margin: 4px 0;
+}
+
+.btn__delete_shop {
+    background-color: rgb(245, 76, 76);
+    border: solid 1px rgb(105, 105, 105);
+    border-radius: 4px;
+    color: white;
+    margin: 4px 0;
+}
+
+.btn__confirm_reservations {
+    background-color: rgb(0, 170, 105);
+    border: solid 1px rgb(105, 105, 105);
+    border-radius: 4px;
+    color: white;
+    margin: 4px 0;
 }
