管理画面CSS調整 #6

--- a/src/public/css/shop_index.css
+++ b/src/public/css/shop_index.css
@@ -2,7 +2,7 @@
     --border: #dbbeb2;
 }
 
-.shop_index--headhing {
+.shop_index--heading {
 
     .heading__top-bar {
         background-color: #e66f00;
