--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -76,10 +76,14 @@
 
 .shop_image {
     width: 100%;
+    height: 400px;
+    margin: 0 auto;
 
     >img {
         width: 100%;
+        height: 100%;
         object-fit: cover;
+        vertical-align: middle;
     }
 }
 
