--- a/src/public/css/shop_index.css
+++ b/src/public/css/shop_index.css
@@ -108,10 +108,12 @@
 
 .shop_image__image {
     width: 90%;
+    height: 170px;
     margin: 0 auto;
 
     >img {
         width: 100%;
+        height: 100%;
         object-fit: cover;
         vertical-align: middle;
     }
